	Allow dds and ds motor idling
		digital idle happens at 1KHz

Version 0.277.107 ALPHA through 294.109 ALPHA:
	Code Cleanup
	OSD Changes
	F7 Changes
	F4 Changes
	flight code changes
	defaults changes

Version 295.110 BETA:
	Update defaults
	Minor OSD change

Version 296.110 BETA:
	Fix self leveling
	Fix minor rearm bug

Version 297.110 BETA:
	Correct dshot frequency

Version 298.110 BETA:
	Increment version
	Git force pull

Version 299.110 BETA:
	Increment version
	Git force pull

Version 300.110 RC18:
	Prevent 1wire auto hardfault
	testmotors function only spins one motor at a time now

Version 0.302.114 BETA:
	Added profile support

Version 0.303.114 BETA
	Fix minor drift issue
	Improve spin stopper

Version 0.304.115 BETA
	Fix minor drift issue caused by profile changes to mixer

Version 0.305.115 BETA
	Revise deadband to be smoother
	Inverse logged pitch output
	Fix hot motor issue some people are having

Version 0.306.116 BETA
	Fix profiling switching hang
	Fix profile 3 not working
	Allow demag comp to be changed on ESCs

Version 0.307.117 BETA
	Dshot code cleanup
	Added crossfire RX protocol

Version 0.307.118 ALPHA
	Test witchcraft

Version 0.308.118 ALPHA
	Test CRSF V2 with telemetry support
		this alpha version only works on USART3
			this is temporary
		crsf is not included in the autodetect yet
		so skip wizard 2 and in console run: crsf_t3
			Solder TBS RX pin to USART 3 TX and TX pin to USART3 RX
			set telem_crsf=1 to enable CRSF telemtry output on the USART 3 TX pin

Version 0.309.119 ALPHA
	Fix profile naming bug

Version 0.310.119 ALPHA
	fix mah calc
	adjusted tramp usart setting

Version 0.311.119 through 0.312.120 ALPHA
	code cleanup

Version 0.313.120 BETA
	fix minor DMA conflight with ws2812 leds

Version 0.314.120 BETA
	led update

#Features in current development:
#	MAVlink compatibility

#Features for future development:
#	transponder output
#	Sonar input
#	GPS input
#	Unobtanium detector