@@ -117,9 +117,9 @@ volatile float servoOutput[MAX_SERVO_NUMBER];
 //static float kdAttenuationCurve[ATTENUATION_CURVE_SIZE] = {1.35, 1.15, 1.00, 1.00, 0.90, 0.90, 0.85, 0.80, 0.75};
 
 static float throttleCurve[ATTENUATION_CURVE_SIZE]      = {0.000f, 0.125f, 0.250f, 0.375f, 0.500f, 0.625f, 0.750f, 0.875f, 1.000f};
-static float kpAttenuationCurve[ATTENUATION_CURVE_SIZE] = {1.100f, 1.050f, 1.000f, 0.900f, 0.800f, 0.900f, 1.000f, 1.100f, 1.200f};
-static float kiAttenuationCurve[ATTENUATION_CURVE_SIZE] = {1.050f, 1.000f, 0.950f, 0.900f, 0.900f, 0.900f, 0.950f, 1.000f, 1.050f};
-static float kdAttenuationCurve[ATTENUATION_CURVE_SIZE] = {1.100f, 1.050f, 1.000f, 0.900f, 0.800f, 0.900f, 1.000f, 1.100f, 1.200f};
+static float kpAttenuationCurve[ATTENUATION_CURVE_SIZE] = {1.05f, 1.05f, 1.00f, 1.00f, 1.00f, 1.00f, 1.00f, 1.05f, 1.05f};
+static float kiAttenuationCurve[ATTENUATION_CURVE_SIZE] = {1.05f, 1.00f, 0.95f, 0.95f, 0.95f, 0.95f, 0.95f, 1.00f, 1.05f};
+static float kdAttenuationCurve[ATTENUATION_CURVE_SIZE] = {1.10f, 1.05f, 1.00f, 0.95f, 0.95f, 0.95f, 0.95f, 1.10f, 1.10f};
 
 static void  PrintCurve(char *outText, float curve[]);
 
