@@ -56,20 +56,20 @@ void SystemClock_Config(void)
     RCC_ClkInitStruct.AHBCLKDivider  = RCC_SYSCLK_DIV1;
     RCC_ClkInitStruct.APB1CLKDivider = RCC_HCLK_DIV4;
     RCC_ClkInitStruct.APB2CLKDivider = RCC_HCLK_DIV2;
-    HAL_RCC_ClockConfig(&RCC_ClkInitStruct, FLASH_LATENCY_5);
+    //HAL_RCC_ClockConfig(&RCC_ClkInitStruct, FLASH_LATENCY_5);
     if (HAL_RCC_ClockConfig(&RCC_ClkInitStruct, FLASH_LATENCY_5) != HAL_OK) {
         while(1);
     }
 
     HAL_SYSTICK_Config(HAL_RCC_GetHCLKFreq()/1000);
-
     HAL_SYSTICK_CLKSourceConfig(SYSTICK_CLKSOURCE_HCLK);
-
-    /* SysTick_IRQn interrupt configuration */
     HAL_NVIC_SetPriority(SysTick_IRQn, 0, 0);
-    HAL_NVIC_EnableIRQ(SysTick_IRQn);
+    /HAL_NVIC_EnableIRQ(SysTick_IRQn);
 
-    systemUsTicks = (HAL_RCC_GetHCLKFreq()/1000000);
+    //HAL_SYSTICK_Config(HAL_RCC_GetHCLKFreq()/1000);
+    //HAL_SYSTICK_CLKSourceConfig(SYSTICK_CLKSOURCE_HCLK);
+    //HAL_NVIC_SetPriority(SysTick_IRQn, 0, 0);
+    systemUsTicks = (HAL_RCC_GetHCLKFreq()/1000000);    
 }
 
 void VectorIrqInit(uint32_t address)
@@ -79,7 +79,7 @@ void VectorIrqInit(uint32_t address)
 
 	CoreDebug->DEMCR |= CoreDebug_DEMCR_TRCENA_Msk;
 	DWT->CYCCNT = 0;
-	DWT->CTRL |= DWT_CTRL_CYCCNTENA_Msk;
+    DWT->CTRL |= DWT_CTRL_CYCCNTENA_Msk;
 }
 
 void BoardInit(void)
